# vpn-telegram-bot

./: .gitignore  .pre-commit-config.yaml  README.md  __main__.py  ci.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
config/: .env.template
docker/: Dockerfile  docker-compose.prod.yml
src/: __main__.py  config.py  db.py  db.sql  handlers.py  models.py  templates.py
src/services/: billing.py  db_management.py  outline.py  validation.py  yoomoney.py
src/templates/: bill.j2  help.j2  new_key.j2  not_authorized.j2  start.j2
tests/: conftest.py  test_services.py  test_yoomoney.py
