readme = "README.md"

[tool.pytest.ini_options]
pythonpath = [
  "./src"
]

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

ignore = ["A003"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[tool.mypy]
ignore_missing_imports = true

[project]
authors = []
requires-python = "<4.0,>=3.11"
dependencies = [
    "python-telegram-bot[job-queue]<21.0,>=20.8",
    "aiosqlite==0.18.0",
    "python-dotenv==0.21.1",
    "jinja2==3.1.2",
    "outline-vpn-api<5.0.0,>=4.0.1",
    "sqlmodel<1.0.0,>=0.0.16",
    "sqlalchemy[asyncio]<3.0.0,>=2.0.27",
    "yoomoney<1.0.0,>=0.1.0",
]
name = "vpn-telegram-bot"
version = "0.1.1"
description = ""
readme = "README.md"

[dependency-groups]
dev = [
    "pytest-asyncio<1.0.0,>=0.23.5",
    "pytest<8.0.0,>=7.2.0",
    "ruff<1.0.0,>=0.1.0",
    "mypy<2.0.0,>=1.8.0",
    "pre-commit>=4.0.1",
]
